# V5C2

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  LICENSE.md  README.md
.github/workflows/: CI - Debug.yml  CI - Desktop.yml  ci.yml
data/: CMakeLists.txt  V5c2Logo.xcf
src/: Background.cpp  Background.h  Board.cpp  Board.h  CMakeLists.txt  Engine.cpp  Engine.h  Inputs.cpp  Inputs.h  Main.cpp  Main.h.in  OpenGL.cpp  OpenGL.h  Piece.h  Piece.inl  State.cpp  State.h  Stbs.cpp  Stbs.h  Utils.cpp  Utils.h  board.h  board.inl  coords.h  coords.inl  entry.cpp  main.cpp  main.h.in  piece.h  piece.inl
src/client/: main.cpp  main.h  platform.cpp  platform.h  texture.cpp  texture.h
src/core/: main.cpp  main.h.in  network.cpp  network.h  stbs.cpp  stbs.h  utils.cpp  utils.h
src/main/: main.cpp  main.h.in
